--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=The Radical Rogerian
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=radical-rogerian.vercel.app
 SHOW_CREATED_TIMESTAMP=false
@@ -11,6 +11,8 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager is-maximized theme-dark magicuser-room-lamp-theme line-highlight-border-default line-highlight-background-default is-focused
+THEME=https://raw.githubusercontent.com/drbap/magicuser-theme-for-obsidian/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
