--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ THEME=https://raw.githubusercontent.com/drbap/magicuser-theme-for-obsidian/HEAD/
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=true
