--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager is-maximized theme-dark magicuser-room-lamp-theme line-highlight-border-default line-highlight-background-default is-focused
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager is-maximized is-focused theme-dark
 THEME=https://raw.githubusercontent.com/drbap/magicuser-theme-for-obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
