--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager is-maximized is-focused theme-dark
+STYLE_SETTINGS_CSS=body.css-settings-manager { --mu-stacked-mode-border-value: 1; --mu-folder-color-hue-value: 92; --mu-file-color-hue-value: 0; --mu-font-headings: ""; --text-highlight-bg: #8A148888; } body.theme-light.css-settings-manager { --mu-text-bold: #BF00FF; --mu-text-italic: #456294; } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-windows is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header is-focused css-settings-manager theme-light is-maximized magicuser-room-lamp-theme mu-sidebar-dark mu-hide-file-icons line-highlight-border-blue line-highlight-background-purple mu-hide-nav-buttons-container mu-hide-titlebar-top-left-buttons mu-hide-side-dock-actions mu-hide-side-dock-settings mu-hide-status-bar
 THEME=https://raw.githubusercontent.com/FireIsGood/obsidian-everforest-enchanted/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
