--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
-STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-linux is-mobile is-android is-phone obsidian-app show-inline-title show-view-header css-settings-manager sanctum-default-light sanctum-default-dark # default-marker-odd default-marker-even
+STYLE_SETTINGS_CSS=body.css-settings-manager { --color-accent-rgb-d: 165, 119, 218; } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=mod-linux is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager theme-dark is-focused sanctum-default-light sanctum-default-dark # default-marker-odd default-marker-even
 THEME=https://raw.githubusercontent.com/jdanielmourao/obsidian-sanctum/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
