--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ THEME=https://raw.githubusercontent.com/jdanielmourao/obsidian-sanctum/HEAD/them
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=false
 dgShowFileTree=true
