--- a/.env
+++ b/.env
@@ -11,6 +11,8 @@ NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
 STYLE_SETTINGS_BODY_CLASSES=mod-linux is-frameless is-hidden-frameless obsidian-app show-inline-title show-view-header css-settings-manager outliner-plugin-dnd theme-light is-focused
+THEME=https://raw.githubusercontent.com/jdanielmourao/obsidian-sanctum/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
